# api-datadog-poc

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
config/: uwsgi-from-docs.ini  uwsgi.ini
